# upd-to-cvat-xml

./: .gitignore  README.md  pyproject.toml
src/upd_to_cvat/: __init__.py  cli.py  converter.py  interpolation.py
tests/: test_cli.py  test_converter.py  test_interpolation.py
viewer/: README.md  index.html  package-lock.json  package.json  vite.config.js
viewer/src/: App.svelte  app.css
viewer/src/lib/: FrameCanvas.svelte  cvat.js  imageCache.js
